# ddr-sdram

./: .gitignore  compile_commands.json
micron/: MT46V4M16.V  MT48LC1M16A1.V  MT48LC8M16A2.V
micron/ddr/: ddr_parameters.vh  readme.txt  subtest.vh  tb.do  tb.v
micron/ddr2/: ddr2_parameters.vh
rtl/: IOBUF_SSTL2_II.v  REF_CHK.v  SDC_BNKCTLR.v  SDC_TOP.v  StMac.v  addr_latch.v  data_path.v  define.v  files.f  sdc_agent.v  sdc_dq_io_64.v  state.v  timescale.v
rtl/micron/: MT48LC1M16A1.V  mt46v4m16.v
sysC-sim/: compile.sh  mem.cmd  sc.mk  sdc_agent.v  verilator.cmd
sysC-sim/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl
tb/: CMakeLists.txt  env.h  main.cpp  sb.h  sc_main.cpp  sdr_seq.h  sdr_tb.h  sdr_testcases.h  tb.h
tb/sdc/: agent.h  drv.h  if.h  mon.h  pkt.h  seq.h  seqr.h
tests/: TOP_TB.v  run.do  sdc_agent.v
tests/Testcases/: list.txt  test10_Sc2blP.v  test11_Dc3bl8.v  test12_Dc3bl4.v  test13_Dc3bl2.v  test14_Dc2bl8.v  test15_Dc2bl4.v  test16_Dc2bl2.v  test17_Dc25bl8.v  test18_Dc25bl4.v  test19_Dc25bl2.v  test1_Sc3bl8.v  test20_Dc3bl8rwEnd.v  test21_Sc3bl8rwEnd.v  test22_BL2_Interleaved_CAS1.v  test23_BL2_Interleaved_CAS2.v  test24_BL2_Interleaved_CAS3.v  test25_BL4_Interleaved_CAS3.v  test26_BL4_Interleaved_CAS2.v  test27_BL4_Interleaved_CAS1.v  test28_BL8_Interleaved_CAS2.v  test29_BL8_Interleaved_CAS1.v  test2_Sc3bl4.v  test30_BL8_Interleaved_CAS3.v  test31_BL2_Sequential_CAS1.v  test32_BL2_Sequential_CAS2.v  test33_BL2_Sequential_CAS3.v  test34_BL4_Sequential_CAS1.v  test3_Sc3bl2.v  (+36 more)
uvm-tb/: common.tpl  pinlist  sdr.tpl
(+26 files in other folders)
